Cabeçalho do perfil de cliente

--- a/frontend/src/assets/styles/custom.scss
+++ b/frontend/src/assets/styles/custom.scss
@@ -2,6 +2,7 @@ $theme-colors: (
   "primary": #500f6a,
   "secondary": #13cffc,
   "danger": #c51414,
+  "light": #ffffff,
   "dark": #263238,
 );
 
