--- a/frontend/src/components/HeaderClient/NavButton/styles.css
+++ b/frontend/src/components/HeaderClient/NavButton/styles.css
@@ -2,6 +2,14 @@
   font-size: 14px;
 }
 
+.nav-button-link a:hover {
+  color: var(--secondary-color);
+}
+
+.nav-button-link a:active {
+  color: var(--secondary-color);
+}
+
 @media (max-width: 576px) {
   .font-size-li {
     font-size: 12px;
