--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -27,3 +27,48 @@ a:hover {
   background-color: #eee;
   box-shadow: 5px 5px 20px rgba(128, 128, 128, 0.5);
 }
+
+.modal-background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  align-items: center;
+}
+
+.modal-box {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 900px;
+  transform: translate(-50%, -50%);
+  border-radius: 10px;
+  padding: 20px;
+  background-color: #eee;
+}
+
+@media (max-width: 1200px) {
+  .modal-box {
+    width: 80%;
+  }
+}
+
+@media (max-width: 768px) {
+  .modal-box {
+    padding: 10px;
+    width: 70%;
+  }
+}
+
+@media (max-width: 576px) {
+  .modal-box {
+    height: 95vh;
+    width: 90%;
+  }
+
+  .button-font-size {
+    font-size: 0.875rem;
+  }
+}
