--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap");
 
 * {
   font-family: "Open Sans", sans-serif;
@@ -11,15 +11,33 @@ h2,
 h3,
 h4,
 h5,
-h6 {
+h6,
+p {
   font-weight: 700;
   margin: 0;
 }
 
-a,
-a:hover {
+a {
   text-decoration: none;
   color: unset;
+}
+
+a:hover {
+  color: var(--secondary-color);
+}
+
+ul,
+li {
+  list-style: none;
+  padding: 0;
+}
+
+button {
+  border: none;
+  outline: none;
+  padding: 0;
+  margin: 0;
+  background: none;
 }
 
 .base-card {
@@ -34,40 +52,20 @@ a:hover {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.3);
   align-items: center;
 }
 
 .modal-box {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 900px;
-  transform: translate(-50%, -50%);
-  border-radius: 10px;
-  padding: 20px;
-  background-color: #eee;
-}
-
-@media (max-width: 1200px) {
-  .modal-box {
-    width: 80%;
-  }
-}
-
-@media (max-width: 768px) {
-  .modal-box {
-    padding: 10px;
-    width: 70%;
-  }
+  right: 0;
+  top: 0;
+  width: 280px;
+  height: 100vh;
+  background-color: #fff;
 }
 
 @media (max-width: 576px) {
-  .modal-box {
-    height: 95vh;
-    width: 90%;
-  }
-
   .button-font-size {
     font-size: 0.875rem;
   }
