Requisição de login e validação completa do formulário

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -52,7 +52,7 @@ button {
 }
 
 .base-input::placeholder {
-  color: #ccc;
+  color: #818181;
 }
 
 .base-input[data-invalid="true"][data-dirty="true"] {
