--- a/frontend/src/routes/Login/styles.css
+++ b/frontend/src/routes/Login/styles.css
@@ -8,6 +8,11 @@
   text-decoration: underline;
 }
 
+.form-login-error {
+  background: #fb5555;
+  border-radius: 15px;
+}
+
 @media (max-width: 992px) {
   .login-container {
     width: 70%;
@@ -16,7 +21,7 @@
 
 @media (max-width: 576px) {
   .login-container {
-    width: 80%;
+    width: 90%;
   }
 
   .login-container-logo img {
