FEAT: Navegação para log in e log out

--- a/frontend/src/components/HeaderClient/MenuBar/styles.css
+++ b/frontend/src/components/HeaderClient/MenuBar/styles.css
@@ -1,7 +1,14 @@
+.menu-bar-top a:hover {
+  color: unset;
+  font-weight: 800;
+}
+
 .menu-bar-items a.active {
   color: var(--secondary-color);
 }
 
-.menu-bar-items li {
+.menu-bar-items li,
+li:hover {
   border-bottom: 1px solid #e1e1e1;
+  cursor: pointer;
 }
