--- a/frontend/src/routes/ClientHome/UserProfile/UserOrder/styles.css
+++ b/frontend/src/routes/ClientHome/UserProfile/UserOrder/styles.css
@@ -1,3 +1,7 @@
+.link-order-details a:hover {
+  color: unset;
+}
+
 @media (max-width: 768px) {
   .info-border {
     border-bottom: 1px solid #e0e0e0;
