FEAT: Página home para área administrativa

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,6 +4,7 @@
   font-family: "Open Sans", sans-serif;
   --primary-color: #500f6a;
   --secondary-color: #13cffc;
+  --tertiary-color: #5d0288;
   --danger-color: #c51414;
 }
 
